# rmat

./: .gitignore  CMakeLists.txt
cmake/: FindAUSALIB.cmake  FindArmadillo.cmake  FindCPC.cmake  FindLOGFT.cmake  RMatConfig.cmake.in
include/: rmat.h
include/rmat/: BetaSpectrum.h  Channel.h  ChiSquare.h  ClebschGordan.h  CompoundSystem.h  Constants.h  HistChiSquare.h  HistLikelihoodChiSquare.h  HistSymmetricChiSquare.h  Interpolator.h  Level.h  LikelihoodChiSquare.h  MetropolisWalker.h  MultiError.h  NormalisedBetaSpectrum.h  Nucleus.h  ObservedSpectrum.h  Pair.h  RMatrixSpectrum.h  RMatrixUtils.h  Rotations.h  Spectrum.h  SpectrumDrawer.h  SphericalHarmonic.h
include/rmat/threebody/: Binner.h  CheatSimulator.h  CoulombCorrector.h  DalitzPlot.h  DecayWeight.h  DensityOfStates.h  DimlessPeakSpectrum.h  DoubleCompound.h  EventGenerator.h  McSimulator.h  MultiSimulationError.h  ObservedDalitzPlot.h  PeakWeight.h  PhaseSpaceGenerator.h  Sampler.h  SimEvent.h  SimLoader.h  SimulationError.h  Simulator.h  ThreeBodyWeight.h  WeightCalculator.h
src/rmat/: BetaSpectrum.cpp  Channel.cpp  ChiSquare.cpp  ClebschGordan.cpp  CompoundSystem.cpp  HistChiSquare.cpp  HistLikelihoodChiSquare.cpp  HistSymmetricChiSquare.cpp  Interpolator.cpp  Level.cpp  LikelihoodChiSquare.cpp  MetropolisWalker.cpp  MultiError.cpp  NormalisedBetaSpectrum.cpp  Nucleus.cpp  ObservedSpectrum.cpp  Pair.cpp  RMatrixSpectrum.cpp  RMatrixUtils.cpp  Rotations.cpp  Spectrum.cpp  SpectrumDrawer.cpp  SphericalHarmonic.cpp
src/rmat/threebody/: Binner.cpp  CheatSimulator.cpp  CoulombCorrector.cpp  DalitzPlot.cpp  DecayWeight.cpp  DensityOfStates.cpp  DimlessPeakSpectrum.cpp  DoubleCompound.cpp  EventGenerator.cpp  McSimulator.cpp  MultiSimulationError.cpp  ObservedDalitzPlot.cpp  PeakWeight.cpp  PhaseSpaceGenerator.cpp  Sampler.cpp  SimLoader.cpp  SimulationError.cpp  Simulator.cpp  ThreeBodyWeight.cpp  WeightCalculator.cpp
